<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBackSignUp"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="Back"
            android:scaleType="fitCenter"
            android:src="@drawable/back_button_1"
            android:layout_marginStart="-10dp"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_person_add"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp" />

        <TextView
            android:text="Create Account"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="Sign up to get started with our app"
            android:textSize="14sp"
            android:textColor="#666"
            android:gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Full Name -->
        <EditText
            android:id="@+id/inputFullName"
            android:hint="Enter your Full Name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

        <!-- Email -->
        <EditText
            android:id="@+id/inputEmail"
            android:hint="Enter your Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

        <!-- Phone Number -->
        <EditText
            android:id="@+id/inputPhone"
            android:hint="Enter your Phone Number"
            android:inputType="phone"
            android:maxLength="15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

        <!-- Password -->
        <EditText
            android:id="@+id/inputPassword"
            android:hint="Create a Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/inputConfirmPassword"
            android:hint="Confirm your Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

        <!-- Role Selection -->
        <TextView
            android:text="Select Your Role"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radioGroupRole"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            >

            <RadioButton
                android:id="@+id/radioEntrant"
                android:text="Entrant"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp" />

            <RadioButton
                android:id="@+id/radioOrganizer"
                android:text="Organizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp" />

<!--            <RadioButton-->
<!--                android:id="@+id/radioAdmin"-->
<!--                android:text="Admin"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="0dp"/>-->
        </RadioGroup>

        <!-- Terms Checkbox -->

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/btnSignUp"
            android:text="Sign Up"
            android:backgroundTint="@color/green2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
