<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@android:color/white"
    tools:context=".screens.Profile.ProfileFragment">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/green3"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Profile Picture -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/ic_nav_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="8dp"
        android:hint="Name"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Role -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/role_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:paddingHorizontal="0dp"
        android:paddingVertical="0dp"
        android:hint="Role"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout">


    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="8dp"
        android:hint="Email"
        app:layout_constraintTop_toBottomOf="@id/role_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="example@gmail.com"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Phone number -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="8dp"
        android:hint="Phone Number"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="###-###-####"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Selected Role Label -->
    <TextView
        android:id="@+id/selected_role_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingLeft="16dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="Selected Role"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/phone_input_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Role Radio Buttons Container -->
    <RadioGroup
        android:id="@+id/role_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/selected_role_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_role_entrant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ENTRANT"
            android:checked="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <RadioButton
            android:id="@+id/radio_role_organizer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ORGANIZER"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

    </RadioGroup>

    <!-- Location enabler -->
    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingVertical="8dp"
        android:text="Location Tracking"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/role_radio_group"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- Location toggle -->





    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/location_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toTopOf="@id/location_label"
        app:layout_constraintBottom_toBottomOf="@id/location_label"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Edit Profile -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="12dp"
        android:text="Save Profile Changes"
        android:backgroundTint="@color/green3"
        app:layout_constraintTop_toBottomOf="@id/location_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Delete Profile -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/system_error_500"
        android:paddingVertical="12dp"
        android:text="Delete Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_button" />

</androidx.constraintlayout.widget.ConstraintLayout>